--- a/src/bundle/Resources/translations/messages.fr.xlf
+++ b/src/bundle/Resources/translations/messages.fr.xlf
@@ -6,15 +6,20 @@
       <note>The source node in most cases contains the sample message as written by the developer. If it looks like a dot-delimitted string such as "form.label.firstname", then the developer has not provided a default message.</note>
     </header>
     <body>
-      <trans-unit id="7633089e371ea9c07787b1aafb30b7ffb1978e1e" resname="cron_edit__sidebar_right__cancel">
-        <source>Discard changes</source>
-        <target>Discard changes</target>
-        <note>key: cron_edit__sidebar_right__cancel</note>
+      <trans-unit id="d21d07085caa55b0fee2fc054a6878bbdb24ae78" resname="breadcrumb.admin">
+        <source>Admin</source>
+        <target>Admin</target>
+        <note>key: breadcrumb.admin</note>
       </trans-unit>
-      <trans-unit id="a220d77c92370635a39a41c292c874739570fae2" resname="cron_edit__sidebar_right__save">
-        <source>Save</source>
-        <target>Save</target>
-        <note>key: cron_edit__sidebar_right__save</note>
+      <trans-unit id="10fe7ad08307807e080801e7358b282fa6dc9610" resname="cron.update">
+        <source>Edit</source>
+        <target>Edit</target>
+        <note>key: cron.update</note>
+      </trans-unit>
+      <trans-unit id="d4c1fcd7b96af66bce059392b5e5883fbd4b071e" resname="cron_update_form.update">
+        <source>Update</source>
+        <target>Update</target>
+        <note>key: cron_update_form.update</note>
       </trans-unit>
       <trans-unit id="7cbc0d177a7a0a66c760f6c698a3c1d24deb7a5f" resname="main__crons">
         <source>Cronjobs</source>
